--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.24.3
-requests==2.31.0
-boto3==1.28.0
-scikit-learn==1.3.0
-pandas==2.0.3
-matplotlib==3.7.2
-cirq==1.3.0
+numpy>=1.21.0
+tensorflow>=2.8.0
+scikit-learn>=1.0.0
+matplotlib>=3.5.0
+scipy>=1.7.0
+flask>=2.0.0
+requests>=2.25.0
